@@ -1,16 +1,0 @@
-<!DOCTYPE HTML>
-<html>
-    <head>
-        <link rel="stylesheet" type="text/css" href="../../../funcunit/qunit/qunit.css" />
-        <title>Seccubus.Scan.List FuncUnit Test</title>
-		<script type='text/javascript' src='../../../steal/steal.js?seccubus/scan/list/list_test.js'></script>
-    </head>
-    <body>
-
-        <h1 id="qunit-header">Seccubus.Scan.List Test Suite</h1>
-    	<h2 id="qunit-banner"></h2>
-    	<div id="qunit-testrunner-toolbar"></div>
-    	<h2 id="qunit-userAgent"></h2>
-        <ol id="qunit-tests"></ol>
-    </body>
-</html>
