@@ -1,59 +1,0 @@
-<!DOCTYPE HTML>
-<html lang="en">
-	<head>
-		<title>Seccubus.Scan.List</title>
-        <style type='text/css'>
-            body {font-family: verdana}
-            .error {border: solid 1px red;}
-            .error_text { color: red; font-size: 10px;}
-            td {padding: 3px;}
-        </style>
-	</head>
-	<body>
-	    <h1>Seccubus.Scan.List Demo</h1>
-		Select Workspace: 
-		<a href='javascript://' ws=1 class='setWorkspace'>1</a>
-		<a href='javascript://' ws=2 class='setWorkspace'>2</a>
-		<a href='javascript://' ws=3 class='setWorkspace'>3</a>
-		<a href='javascript://' ws=4 class='setWorkspace'>4</a>
-		<a href='javascript://' ws=5 class='setWorkspace'>5</a><br>
-
-		Create scan in workspace: 
-		<a href='javascript://' ws=1 class='createScan'>1</a>
-		<a href='javascript://' ws=2 class='createScan'>2</a>
-		<a href='javascript://' ws=3 class='createScan'>3</a>
-		<a href='javascript://' ws=4 class='createScan'>4</a>
-		<a href='javascript://' ws=5 class='createScan'>5</a><br>
-		<br>
-		List:
-		<ul id='scans'></ul>
-		<script type='text/javascript' 
-                src='../../../steal/steal.js'>
-        </script>
-		<script type='text/javascript'>
-			steal(	'seccubus/scan/list',
-				'seccubus/fixtures',
-			function(){
-				
-				$('.setWorkspace').click( function(){
-					ws = $(this).attr("ws");
-					$('#scans').seccubus_scan_list({workspace : ws});
-				});
-
-				$('.createScan').click( function(){
-					ws = $(this).attr("ws");
-					new Seccubus.Models.Scan({
-						name: "Added scan",
-						workspace: ws,
-						scanner: "Nessus",
-						parameters: "bla",
-						targets: "localhost",
-						findings: "0",
-						lastScan: ""
-					}).save();
-				});
-				$('#scans').seccubus_scan_list();
-			})
-		</script>
-	</body>
-</html>
