@@ -1,6 +1,0 @@
-<% %>
-<li>
-	<% if ( typeof message != 'undefined') { %>
-		<%= message %>
-	<% } %>
-</li>
