@@ -18,6 +18,7 @@ New features / Issues resolved
 * Clarified the purpose of status buttons, filters and bul update form in GUI.
 * Added the capability to filter on severity, finding text and remark text
 * Removed www/oldstyle GUI
+* Removed Seccubus.Scan.List
 
 Bigs fixed (tickets closed):
 ----------------------------
